add form and give style to that form

--- a/index.html
+++ b/index.html
@@ -20,6 +20,28 @@
         </thead>
         <tbody class="table-body"></tbody>
       </table>
+      <button class="btn">ADD BOOK</button>
+      <div class="form-container">
+        <form class="add-book-form">
+          <label for="title">
+            Title
+            <input type="text" id="title" />
+          </label>
+          <label for="author">
+            Author
+            <input type="text" id="author" />
+          </label>
+          <label for="pages">
+            Pages
+            <input type="text" id="pages" />
+          </label>
+          <label for="status">
+            Status
+            <input type="text" id="status" />
+          </label>
+          <button class="btn">Submit</button>
+        </form>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
