update addBookToLibrary function to add book through form
update showBook function to show innerHTML

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
         </thead>
         <tbody class="table-body"></tbody>
       </table>
-      <button class="btn">ADD BOOK</button>
+      <button class="btn btn-add">ADD BOOK</button>
       <div class="form-container">
         <form class="add-book-form">
           <label for="title">
             Title
-            <input type="text" id="title" />
+            <input type="text" id="title" required />
           </label>
           <label for="author">
             Author
-            <input type="text" id="author" />
+            <input type="text" id="author" required />
           </label>
           <label for="pages">
             Pages
-            <input type="text" id="pages" />
+            <input type="text" id="pages" required />
           </label>
           <label for="status">
             Status
-            <input type="text" id="status" />
+            <input type="text" id="status" required />
           </label>
-          <button class="btn">Submit</button>
+          <button class="btn btn-submit">Submit</button>
         </form>
       </div>
     </div>
