add functionality to add book

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="container">
+      <div class="hero"><h1 class="hero-heading">LIBRARY</h1></div>
       <table class="books-table">
         <thead>
           <tr>
@@ -16,6 +17,8 @@
             <th scope="col">Author</th>
             <th scope="col">Pages</th>
             <th scope="col">Read Status</th>
+            <th scope="col">Change Status</th>
+            <th scope="col">Remove Books</th>
           </tr>
         </thead>
         <tbody class="table-body"></tbody>
@@ -39,7 +42,7 @@
             Status
             <input type="text" id="status" required />
           </label>
-          <button class="btn btn-submit">Submit</button>
+          <button class="btn btn-submit">SUBMIT</button>
         </form>
       </div>
     </div>
