add form to add book

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -25,7 +32,8 @@
       </table>
       <button class="btn btn-add">ADD BOOK</button>
       <div class="form-container">
-        <form class="add-book-form">
+        <form class="add-book-form" autocomplete="off">
+          <button class="btn btn-close"><i class="fas fa-times"></i></button>
           <label for="title">
             Title
             <input type="text" id="title" required />
